--- a/examples/codes/plugin/across-languages/readme
+++ b/examples/codes/plugin/across-languages/readme
@@ -1,6 +1,6 @@
 Go
 $ go build -o plugin-client client/plugin.go
-$ go build -o plugin-server server/plugin.go
+$ go build -o plugin-server server/go/plugin.go
 $ ./plugin-client  2> /tmp/1
 response body: hello go
 
